# llm-zoomcamp-project3

./: .dockerignore  ARCHITECTURE_UPDATE_SUMMARY.md  Dockerfile  RAG_EVALUATION_FAQ.md  README.md  docker-compose.yml  generate_test_load.py  pyproject.toml  test_10_packages.py  test_components.py  test_ml_harvester.py
.github/workflows/: ci-cd.yml
app/: ingestion_pipeline.py  main.py  pypi_harvester.py  python_doc_harvester.py  ui_streamlit.py
app/core/: rag_engine.py  rag_engine_simple.py
app/evaluation/: llm_eval.py  retrieval_eval.py
data/raw/pypi_packages/: albumentations_meta.json  altair_meta.json  bokeh_meta.json  catboost_meta.json  catboost_readme.md  category-encoders_meta.json  category-encoders_readme.md  dash_meta.json  dash_readme.md  eli5_meta.json  eli5_readme.md  fastai_meta.json  fastai_readme.md  feature-engine_meta.json  featuretools_meta.json  flax_meta.json  gensim_meta.json  gensim_readme.md  holoviews_meta.json  hyperopt_meta.json  imageio_meta.json  imageio_readme.md  imbalanced-learn_meta.json  jax_meta.json  keras_meta.json  langchain_meta.json  lime_meta.json  mlxtend_meta.json  mxnet_meta.json  mxnet_readme.md  nltk_meta.json  nltk_readme.md  pillow_meta.json  plotly_meta.json  pytorch-lightning_meta.json  pytorch-lightning_readme.md  seaborn_meta.json  sentencepiece_meta.json  shap_meta.json  statsmodels_meta.json  (+8 more)
prometheus/: prometheus.yml
screenshots/: SCREENSHOTS_GUIDE.md
tests/: test_api.py  test_harvester.py  test_ingest_pipeline.py  test_rag_engine.py  test_ui_streamlit.py
(+2 files in other folders)
